[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ui/LevelEnd.gd" type="Script" id=1]

[node name="Control" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_right = 1024.0
margin_bottom = 14.0
text = "level complete"

[node name="ButtonNextLevel" type="Button" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 38.0
text = "next level"

[node name="ButtonRestart" type="Button" parent="."]
margin_top = 42.0
margin_right = 1024.0
margin_bottom = 62.0
text = "restart"

[node name="ButtonMainMenu" type="Button" parent="."]
margin_top = 66.0
margin_right = 1024.0
margin_bottom = 86.0
text = "return to main menu"

[connection signal="pressed" from="ButtonNextLevel" to="." method="_on_ButtonNextLevel_pressed"]
[connection signal="pressed" from="ButtonRestart" to="." method="_on_ButtonRestart_pressed"]
[connection signal="pressed" from="ButtonMainMenu" to="." method="_on_ButtonMainMenu_pressed"]
